<resources>
    <string name="app_name">Online Congress</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mateus Andrés</string>
    <string name="nav_header_subtitle">mateus@mnm.team</string>
    <string name="nav_header_desc">mnm.team/mateus</string>
    <string name="seleccione_su_nueva_ciudad">Seleccione su nueva ciudad</string>
    <string name="ingresar_al_congreso">Ingresar al congreso</string>
    <string name="logo_del_congreso">Logo del congreso</string>
    <string name="seleccione_un_congreso">Seleccione un congreso:</string>
    <string name="congreso">CONGRESO VIRTUAL</string>
    <string name="comenzar">Comenzar</string>
    <string name="presionando_comenzar">Presionando \'Comenzar\', acepta los términos y condiciones de uso de la aplicación Online Congress</string>
    <string name="logo_de_online_congress">Logo de Online Congress</string>
    <string name="_2019_mnm_gridsoa">©2019, MNM - GRIDSOA</string>
    <string name="mateus">Mateus</string>
    <string name="asiste_a">Asiste a múltiples congresos virutales con:</string>
    <string name="participa">¡Participa ahora!</string>
    <string name="software_para_congresos">Software para congresos virtuales de investigación.</string>
    <string name="restablecer_contrase_a">Restablecer contraseña</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="correo_electr_nico_de_su_cuenta">Correo electrónico de su cuenta</string>
    <string name="ha_olvidado_su_contrase_a">¿Ha olvidado su contraseña? Ingrese su dirección de correo electrónico. Recibirá un mail para establecer una contraseña nueva.</string>
    <string name="recuperar_cuenta_asistente">RECUPERAR CUENTA (Asistente)</string>
    <string name="olvid_su_contrase_a">¿Olvidó su contraseña?</string>
    <string name="reg_strese_aqu">REGÍSTRESE AQUÍ</string>
    <string name="contrase_a">Contraseña</string>
...
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="asterisc">**********</string>
    <string name="seguridad">Seguridad</string>
    <string name="tel_fono_actual">Teléfono actual</string>
    <string name="tel_fono">Teléfono</string>
    <string name="instituci_n">Institución</string>
    <string name="congresos">Congreso</string>
    <string name="correo_electr_nico_actual">Correo electrónico actual</string>
    <string name="correo_correo_com">correo@correo.com</string>
    <string name="correo">Correo</string>
    <string name="identidad">Identidad</string>
    <string name="n_identidad">Número de identidad</string>
    <string name="enviar_comentario">Enviar comentario</string>
...
    <string name="modificar_cuenta">Modificar cuenta</string>
    <string name="ayuda_y_comentarios">Ayuda y comentarios</string>
    <string name="equipo">Equipo</string>
    <string name="t_rminos_y_condiciones">Términos y condiciones</string>
    <string name="informaci_n_de_la_versi_n">Información de la versión</string>
    <string name="salir">Salir</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="cambiar_congreso">Cambiar congreso</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
...
